src/tests/errors/lexing/test06.cmp
program main 
begin
    proc x() 
    begin 
       x := .55  /* illegal float */
    end 
end 